# patch2.0

./: .gitignore  CDashboard.js  CDashboard.module.css  CGraph.js  core.py  data.csv  main.py  middleware.py  package-lock.json  pyproject.toml  requirements.txt  route.py  start-flask.js  structure
API/: auth.py  condition_monitoring.py  dashboard.py  data_manager.py  etl.py  files.py  misc.py  rcm.py  reliability.py  rul.py  system.py  tasks.py
Reliability/: alpha_beta.py  overhaul_algos.py  reliability.py
bayesian_network/: New data set1.xlsx  con_mon_phase_four.py  finalPhaseList.py  main.py  mainHelp.py  plot_graph.py
classes/: DA Configuration input file.xlsx  MLE.py  System_Configuration_Netra.py  custom_settings.py  overhaulsAlgos.py  rel_dump.txt  reliability.py  taskRelCode.py  taskReliability.py  trial.py  trial2.py
dB/: dB_connection.py  dB_utility.py  mission_profile.py
depricated_stuff/: data.js
frontend/: index.html  package-lock.json  package.json  restore-backup.sh  vite.config.js
generic_classes/: System_Configuration.py
json_data/: 00.py  duty_cycle.json  maintenanc.json  parallel_component.json  redundancy_data.json  trial.js
netra/: .env  package-lock.json  package.json
netra_not_in_use/: outdated-packages.json
pacag/: package-lock.json  package.json
tasks/: ChennaiTrial.json  Current Task.json  Firearm_firing1.json  Firearm_firing2.json  Firearm_firing3.json  GT Task.json  GTG J3 Task.json  GUN FIRING TASK 1.json  GUN FIRING TASK 2.json  GUN_FIRING.json  GUN_FIRING1.json  GUN_FIRING2.json  GUN_FIRING3.json  GUN_FIRING4.json  (+26 more)
(+593 files in other folders)
