[project]
name = "patch2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bcrypt==4.0.1",
    "flask==2.3.2",
    "flask-apscheduler==1.13.1",
    "flask-mail>=0.10.0",
    "flask-talisman>=1.1.0",
    "numpy==1.24.4",
    "pandas==2.0.3",
    "pyodbc>=5.2.0",
    "reportlab==4.0.4",
    "requests>=2.32.4",
    "scipy==1.10.1",
    "sympy==1.12",
    "waitress>=3.0.0",
]
